# KTrack-Qt

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  ktrack-qt.pro  ktrack.kdevelop  ktrack.kdevprj  ktrack.kdevses  ktrack.lsm  nasa.tle  subdirs
admin/: am_edit
doc/: Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
ktrack/: Makefile.am  Makefile.in  calculator.cpp  calculator.h  dcopinterface.h  globals.cpp  globals.h  groundstationsettings.cpp  groundstationsettings.h  groundstationsettingsbase.ui  hamlibwrapper.cpp  hamlibwrapper.h  ktrack.cpp  ktrack.desktop  ktrack.h  ktrack.kidl  ktrack_skel.cpp  main.cpp  mapwidget.cpp  mapwidget.h  predictionlist.cpp  predictionlist.h  predictionlistbase.ui  rigConfigBase.ui  rigconfig.cpp  rigconfig.h  rigctrl.cpp  rigctrl.h  satellite.cpp  satellite.h  satelliteSelectionBase.ui  satellitelistview.cpp  satellitelistview.h  satellitelistviewitem.cpp  satellitelistviewitem.h  satelliteselection.cpp  satelliteselection.h  squintcalculations.cpp  squintcalculations.h  squintcalculationsbase.ui  (+10 more)
ktrack/sgp4sdp4/: Makefile.am  Makefile.in  sgp4sdp4.c  sgp4sdp4.h  sgp_math.c  sgp_obs.c
po/: Makefile.in  de.gmo  de.po  fr.gmo  fr.po  ktrack.pot
