####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsgp4sdp4.a

INCLUDES = $(all_includes)

libsgp4sdp4_a_METASOURCES = AUTO

libsgp4sdp4_a_SOURCES = solar.c sgp_time.c sgp_obs.c sgp_math.c sgp_in.c sgp4sdp4.c 


EXTRA_DIST = 1_COPYING 2_README README sgp4sdp4.c sgp4sdp4.h sgp_in.c sgp_math.c sgp_obs.c sgp_time.c solar.c 

####### kdevelop will overwrite this part!!! (end)############
